log
Sun Mar 13 20:19:18 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
cf7afeb
Sun Mar 13 20:27:27 HSP 2022: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:40:8: error: unused variable 'vectorSuma' [-Werror=unused-variable]
    int vectorSuma[m], i;
        ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
341618c
Sun Mar 13 20:28:53 HSP 2022: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
fe177c6
Sun Mar 13 20:35:36 HSP 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:70:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &persona;
           ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2ed255a
